front end cleaned up edits. Copy adjustments, materialize css tweak aling with color scheme, icon adjustments to dog theme

--- a/public/browse.html
+++ b/public/browse.html
@@ -23,59 +23,57 @@
     <title>Ruff Spots | Browse</title>
 </head> 
 
-
+ <!--This page is now BROWSE - 4A/B -->
 
 <body>
     <header>
-    <nav class="brown lighten-2">
-      <div class="nav-wrapper">
-        <div class="container">
-          <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>
-          <a href="#" data-activates="mobile-menu" class="button-collapse">
-            <i class="material-icons">menu</i>
-          </a>
-          <ul class="right hide-on-med-and-down">
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="search.html">SEARCH</a>
-            </li>
-            <li>
-              <a href="submit.html">SUBMIT</a>
-            </li>
-          </ul>
-          <ul class="side-nav" id="mobile-menu">
-            <li>
-              <div class="userView">
-                <div class="background">
-                  <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+        <nav class="brown lighten-2">
+            <div class="nav-wrapper">
+                <div class="container">
+                    <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>                    <a href="#" data-activates="mobile-menu" class="button-collapse">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul class="right hide-on-med-and-down">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="search.html">Sniff</a>
+                        </li>
+                        <li>
+                            <a href="submit.html">Mark</a>
+                        </li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-menu">
+                        <li>
+                            <div class="userView">
+                                <div class="background">
+                                    <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="search.html">Sniff</a>
+                        </li>
+                        <li>
+                            <a href="submit.html">Mark</a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
-            </li>
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="search.html">SEARCH</a>
-            </li>
-            <li>
-              <a href="submit.html">SUBMIT</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+            </div>
+        </nav>
     </header>
     <main>
-        <!--This page is now BROWSE - 4A/B -->
+
         <div class="row center-align searchIMG">
             <div class="col s12"></div>
             <div class="row">
                 <div class="col s12 m6 offset-m2">
                     <!-- <div class="col m9 s4"> -->
                         <div class="tagline">Local Ruff Spots</div>
-                        <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
                     </div>
                 </div>
             </div>
@@ -94,7 +92,7 @@
 
         <!-- Modal Structure -->
         <div id="modal2" class="modal modal-fixed-footer modalStyle">
-            <div class="modal-content">
+            <div class="modal-content teal lighten-4">
                 <h3 id="title" class="center-align"></h3>
                 <!-- <div class="panel panel-default">
     
@@ -121,8 +119,8 @@
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <textarea id="textarea1" class="materialize-textarea"></textarea>
-                                    <label for="textarea1">comments</label>
+                                    <textarea id="textarea1" class="materialize-textarea teal lighten-4"></textarea>
+                                    <label for="textarea1">Bark About this Spot :</label>
                                 </div>
                             </div>
                         </form>
@@ -152,15 +150,15 @@
 
 
             </div>
-            <div class="modal-footer">
-                <a href="#!" id="newReview" class="modal-action modal-close waves-effect btn">Submit</a>
+            <div class="modal-footer teal lighten-4">
+                <a href="#!" id="newReview" class="modal-action modal-close waves-effect btn yellow darken-4">Submit</a>
             </div>
         </div>
 
 
          <!-- Modal Structure For SUCCESS-->
  <div id="successModal" class="modal modal-fixed-footer modalStyle">
-    <div class="modal-content">
+    <div class="modal-content yellow darken-4">
         <h3 class="center-align">Thanks for Reviewing! Lets search for another Spot!</h3>
     </div>
 </div>
