--- a/public/index.html
+++ b/public/index.html
@@ -24,45 +24,45 @@
 
 <body id="geolocate">
   <header>
-    <nav class="brown lighten-2">
+    <nav class="lime darken-4">
       <div class="nav-wrapper">
-        <div class="container">
-          <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>
-          <a href="#" data-activates="mobile-menu" class="button-collapse">
-            <i class="material-icons">menu</i>
-          </a>
-          <ul class="right hide-on-med-and-down">
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="search.html">SEARCH</a>
-            </li>
-            <li>
-              <a href="submit.html">SUBMIT</a>
-            </li>
-          </ul>
-          <ul class="side-nav" id="mobile-menu">
-            <li>
-              <div class="userView">
-                <div class="background">
-                  <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
-                </div>
-              </div>
-            </li>
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="search.html">SEARCH</a>
-            </li>
-            <li>
-              <a href="submit.html">SUBMIT</a>
-            </li>
-          </ul>
-        </div>
+          <div class="container">
+              <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width=175px></a>
+              <a href="#" data-activates="mobile-menu" class="button-collapse">
+                  <i class="material-icons">menu</i>
+              </a>
+              <ul class="right hide-on-med-and-down">
+                  <li>
+                     <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="search.html">Sniff</a>
+                  </li>
+                  <li>
+                      <a href="submit.html">Mark</a>
+                  </li>
+              </ul>
+              <ul class="side-nav" id="mobile-menu">
+                  <li>
+                      <div class="userView">
+                          <div class="background">
+                              <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+                          </div>
+                      </div>
+                  </li>
+                  <li>
+                      <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="search.html">Sniff</a>
+                  </li>
+                  <li>
+                      <a href="submit.html">Mark</a>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
+  </nav>
   </header>
   <main>
 
@@ -72,7 +72,7 @@
       </div>
       <div class="row">
         <div class="col s12 m6 offset-m2">
-          <div class="tagline">Find Local Spots To Bring Your Four Legged Friend.</div>
+          <div class="tagline">The Easiest Way to a Dog Friendly Day!</div>
         </div>
       </div>
     </div>
@@ -81,9 +81,9 @@
 
     <div class="row center-align">
       <div class="col s4">
-        <h3>Spot Search</h3>
+        <h3>Sniff Out a Spot</h3>
         <!-- <a class="waves-effect waves-light btn ">Find a Ruff Spot</a> -->
-        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+        <a class="btn-floating btn-large waves-effect waves-light btn yellow darken-4" href="search.html">
           <i class="material-icons">home</i>
         </a>
 
@@ -106,7 +106,7 @@
 
 
             <!-- <div class="col s4 m2"> -->
-            <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
+            <button class="btn waves-effect waves-light yellow darken-4" name="action" id="localSubmit" type="submit" value="Submit">Sniff!
               <i class="material-icons right">send</i>
             </button>
 
@@ -119,8 +119,8 @@
 
 
       <div class="col s4">
-        <h3>Submit Your Spot</h3>
-        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+        <h3>Mark Your Spot</h3>
+        <a class="btn-floating btn-large waves-effect waves-light btn yellow darken-4" href="submit.html">
           <i class="material-icons">add</i>
         </a>
         <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
@@ -129,7 +129,7 @@
     </div>      
 
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer lime darken-4">
     <div class="container">
       <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
       <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
