--- a/public/submit.html
+++ b/public/submit.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <nav class="brown lighten-2">
+        <nav class="lime darken-4">
             <div class="nav-wrapper">
                 <div class="container">
                     <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>                    <a href="#" data-activates="mobile-menu" class="button-collapse">
@@ -32,13 +32,13 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="search.html">SEARCH</a>
+                            <a href="search.html">Sniff</a>
                         </li>
                         <li>
-                            <a href="submit.html">SUBMIT</a>
+                            <a href="submit.html">Mark</a>
                         </li>
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
@@ -50,13 +50,13 @@
                             </div>
                         </li>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="search.html">SEARCH</a>
+                            <a href="search.html">Sniff</a>
                         </li>
                         <li>
-                            <a href="submit.html">SUBMIT</a>
+                            <a href="submit.html">Mark</a>
                         </li>
                     </ul>
                 </div>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col s12 m6 offset-m2">
 
-                    <div class="tagline">Submit A Spot</div>
+                    <div class="tagline">Start Making Your Mark</div>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                         </div>
 
 
-                        <button class="btn waves-effect waves-light" name="action" id="btn-place" type="submit" value="Submit">Search!
+                        <button class="btn waves-effect waves-light  yellow darken-4" name="action" id="btn-place" type="submit" value="Submit">Mark!
                             <i class="material-icons right">send</i>
                         </button>
                     </form>
@@ -103,7 +103,7 @@
                 </div>
         </div>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer lime darken-4">
         <div class="container">
             <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
         </div>
