clean up css color, added icons with dog theme, adjusted copy to dog theme

--- a/public/browse.html
+++ b/public/browse.html
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <nav class="brown lighten-2">
+        <nav class="lime darken-4">
             <div class="nav-wrapper">
                 <div class="container">
                     <a href="index.html" class="brand-logo"><img src="img/ruffspots-ora.png" width= 175px></a>                    <a href="#" data-activates="mobile-menu" class="button-collapse">
@@ -164,7 +164,7 @@
 </div>
 
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer lime darken-4">
         <div class="container">
             <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
 
